--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,15 @@ jobs:
           - name: Setup
             run: sudo apt-get update && sudo apt-get install --no-install-recommends -y biber latexmk lmodern texlive-bibtex-extra texlive-latex-extra texlive-science
           - name: Checkout
-            uses: actions/checkout@v2
+            uses: actions/checkout@v4
+            with:
+              ref: riscv
           - name: Keep Racket edition
             run: sed -i 's|\\def\\edition{0}|\\def\\edition{0}|g' book.tex
           - name: Build PDF
             run: make
           - name: Release
-            uses: softprops/action-gh-release@v1
+            uses: softprops/action-gh-release@v2
             if: startsWith(github.ref, 'refs/tags/')
             with:
               files: book.pdf
