--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,5 @@ jobs:
             if: startsWith(github.ref, 'refs/tags/')
             with:
               files: book.pdf
+        permissions:
+          contents: write
