--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
             run: make
           - name: Release
             uses: softprops/action-gh-release@v2
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             if: startsWith(github.ref, 'refs/tags/')
             with:
               files: book.pdf
